[gd_scene load_steps=6 format=3 uid="uid://b6mhjohaju7ph"]

[ext_resource type="Script" uid="uid://8to4jfgtsuqu" path="res://scripts/base/buildings/Building.gd" id="1_jh23e"]
[ext_resource type="Texture2D" uid="uid://c0uhnt1ai5fq6" path="res://assets/spritesTEST/128x256.png" id="2_jh23e"]
[ext_resource type="Resource" uid="uid://c1vbuspwmyra3" path="res://assets/TEST.tres" id="6_32b66"]
[ext_resource type="Script" uid="uid://jxbgvs6q5kdo" path="res://scripts/base/buildings/ProductionPanel.gd" id="6_qdbmf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2fn42"]
size = Vector2(117.581, 75.5049)

[node name="Wood" type="Area2D"]
script = ExtResource("1_jh23e")
footprint = Vector2i(8, 4)
build_time = 2.0
cost = {
"wood": 20
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jh23e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.369354, -0.896529)
scale = Vector2(2.12982, 1.75423)
shape = SubResource("RectangleShape2D_2fn42")

[node name="BuildTimer" type="Timer" parent="."]

[node name="LongPressTimer" type="Timer" parent="."]

[node name="InfoMenu" type="PopupPanel" parent="."]
size = Vector2i(448, 360)

[node name="MainPanel" type="Control" parent="InfoMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 444.0
offset_bottom = 356.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(9.24132, 5.58381)
script = ExtResource("6_qdbmf")
recipes = Array[Resource]([ExtResource("6_32b66")])

[node name="StatusLabel" type="Label" parent="InfoMenu/MainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.111
anchor_bottom = 0.065
offset_left = 15.5822
offset_top = 0.179089
offset_right = 11.1822
offset_bottom = 0.299088
scale = Vector2(0.115535, 0.289194)
text = "f"

[node name="Timer" type="Timer" parent="InfoMenu/MainPanel"]

[node name="ButtonContainer" type="VBoxContainer" parent="InfoMenu/MainPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ConfirmDialog" type="ConfirmationDialog" parent="InfoMenu/MainPanel"]

[node name="InfoLabel" type="Label" parent="InfoMenu/MainPanel/ConfirmDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 51.0
text = "давай 10 дерева"

[node name="QueueContainer" type="HBoxContainer" parent="InfoMenu/MainPanel"]
custom_minimum_size = Vector2(137.295, 47.94)
layout_direction = 2
layout_mode = 0
offset_left = -1.94777
offset_top = 38.3251
offset_right = 153.862
offset_bottom = 86.2651
scale = Vector2(0.2, 0.414)
pivot_offset = Vector2(3.985, 3.535)
theme_override_constants/separation = 40

[node name="CountdownLabel" type="Label" parent="."]
offset_left = -32.0
offset_top = -88.0
offset_right = 32.0
offset_bottom = -65.0
text = "00:00:00"
